--- a/css/styles.css
+++ b/css/styles.css
@@ -1,29 +1,51 @@
 body{
-  background-color: #ef3939;
-}
-#logo{
-  box-sizing: border-box;
-  border-radius: 100%;
+  background-color:#ef3939;
 }
 .jumbotron {
   margin-top: 50px;
+  background-color: #ef3939;
   border: solid red 2px;
   padding-top: 20px;
 }
-.jumbotron h1 {
-  padding-top: 30px;
-  padding-left: 250px;
-  color: white;
-  font-size: 60px;
-}
-.row1{
-  display: flex;
-}
-  .col-md-4{
-    flex-direction: column;
-  }
-h2{
-  text-align: center;
+.jumbotron h2 {
+  padding-top: 50px;
+  padding-left: 400px;
   color: white;
   font-size: 50px;
+  font-family: fantasy;
+  font-style: italic;
+}
+.emphasis {
+  font-style: italic;
+  text-decoration: underline;
+}
+.btn {
+  background-color: black;
+}
+.stagedReveal {
+  display: none;
+}
+.heading {
+  color: white;
+  text-decoration: underline;
+}
+.framed {
+  border: solid white 2px;
+  border-radius: 6px;
+  padding: 25px;
+  color: white;
+  margin-top: 40px;
+  background-color: black;
+
+}
+.addressText h4 {
+  padding-left: 150px;
+}
+#logo {
+  float: left;
+}
+#totalDiv {
+  font-size: 40px;
+  text-align: center;
+  margin-top: 20px;
 }
