--- a/css/styles.css
+++ b/css/styles.css
@@ -16,11 +16,17 @@ body{
   box-sizing: border-box;
   border-radius: 10px;
 }
+.jumbotron h1{
+  font-size: 65px;
+  text-shadow: red;
+  text-shadow: 3px 3px red;
+}
 .jumbotron {
   margin-top: 50px;
-  background-color: #ef3939;
+  background-color: black;
   border: solid red 2px;
   padding-top: 20px;
+
 }
 .jumbotron h2 {
   padding-top: 50px;
@@ -29,6 +35,8 @@ body{
   font-size: 50px;
   font-family: fantasy;
   font-style: italic;
+  text-shadow: 2px 2px red;
+
 }
 
 .btn {
@@ -40,7 +48,13 @@ body{
 }
 .heading {
   color: white;
-  font-size:50px;
+  font-size:40px;
+}
+#pizza1{
+  left: 150px;
+}
+.row1{
+  display: flex;
 }
 .framed {
   border: solid white 2px;
