--- a/css/styles.css
+++ b/css/styles.css
@@ -87,6 +87,9 @@ body{
   color: white;
   margin-top: 40px;
   background-color: black;
+}
+ #two:hover{
+  background-color: white;
 
 }
 .addressText h4 {
